# tfm-discord-moderator

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
configs/: labels.yml
data/: README.md
data/samples/: messages_sample.jsonl
docs/: architecture.md  baseline.md  data_format.md  datasets.md  development_plan.md
scripts/: check_environment.py  check_llama_server.py  classify_sample.py  prepare_jigsaw.py  run_baseline.py
src/classification/: __init__.py  baseline_classifier.py  prompts.py
src/data/: __init__.py  jsonl.py
src/discord_bot/: __init__.py  bot.py
src/domain/: schemas.py
src/evaluation/: __init__.py
src/inference/: __init__.py  llama_cpp_client.py
src/tfm_discord_moderator/: __init__.py  config.py
src/tfm_discord_moderator/classification/: baseline_classifier.py  prompts.py
src/tfm_discord_moderator/discord_bot/: bot.py
src/tfm_discord_moderator/domain/: __init__.py
src/tfm_discord_moderator/evaluation/: metrics.py
src/tfm_discord_moderator/inference/: llama_cpp_client.py
tests/: test_baseline_prompt.py  test_config.py  test_evaluation_metrics.py  test_json_parsing.py  test_llama_cpp_client.py  test_normalized_data.py  test_prepare_jigsaw.py  test_run_baseline.py
