[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfm-discord-moderator"
version = "0.1.0"
description = "POC para clasificacion tematica y apoyo a moderacion en Discord con LLM local."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "discord.py>=2.4.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "typer>=0.12.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tfm_discord_moderator*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "rust-just>=1.51.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12.20240917",
  "uv>=0.11.14"
]
