[project]
name = "tfm-discord-moderator"
version = "0.1.0"
description = "POC para clasificacion tematica y apoyo a moderacion en Discord con LLM local."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "discord.py>=2.4.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "typer>=0.12.0"
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
show-fixes = true

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "--tb=short",
  "--strict-markers"
]

[tool.ty.src]
include = ["src", "scripts", "tests"]

[tool.ty.terminal]
output-format = "concise"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "rust-just>=1.51.0",
  "ruff>=0.6.0",
  "ty>=0.0.35",
  "uv>=0.11.14"
]
